--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="libs/amenu/amenu.css">
 	<title>iPhone</title>
 	<script src="./js/scroll.js" defer></script>
+	<script src="./js/tabs.js" defer></script>
 </head>
 
 <body>
@@ -76,7 +77,7 @@
 						<a class="card-details__link-characteristics" href="#characteristics">Полные харакстеристики</a>
 						<div class="card-details__footer">
 							<p class="card-details__price">
-								99990₽
+								99 990₽
 							</p>
 							<button class="button button_buy card-details__button_buy"
 								data-button-buy="Оплата">Купить</button>
