Story #4. Added accordeon.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<title>iPhone</title>
 	<script src="./js/scroll.js" defer></script>
 	<script src="./js/tabs.js" defer></script>
+	<script src="./js/accordeon.js" defer></script>
 </head>
 
 <body>
@@ -78,7 +79,7 @@
 						<div class="card-details__footer">
 							<p class="card-details__price">
 								99 990₽
-							</p>
+							</p>	
 							<button class="button button_buy card-details__button_buy"
 								data-button-buy="Оплата">Купить</button>
 							<button class="button card-details__button_delivery"
