Story #5. Connected DataBase.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script src="./js/scroll.js" defer></script>
 	<script src="./js/tabs.js" defer></script>
 	<script src="./js/accordeon.js" defer></script>
+	<script src="./js/getData.js" defer></script>
 </head>
 
 <body>
